--- a/templates/base.html
+++ b/templates/base.html
@@ -95,6 +95,7 @@
     <script src="{% static 'lib/jquery/jquery-3.6.0.min.js' %}"></script>
     <script src="{% static 'lib/bootstrap4/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/sidenav.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
     <!-- Injected extra scripts -->
     {% block injected_js %}
     {% endblock %}
