Removed unused IDs on index template

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -7,8 +7,8 @@
     <!-- Header section -->
     <div class="row pt-4">
         <div class="col-12 text-center">
-            <h1 id="home-header" class="page-header mx-auto">Welcome, {{ user.first_name }}</h1>
-            <h3 id="home-subheader" class="page-subheader mx-auto">What do you require?</h3>
+            <h1 class="page-header mx-auto">Welcome, {{ user.first_name }}</h1>
+            <h3 class="page-subheader mx-auto">What do you require?</h3>
         </div>
     </div>
     <!-- Selection cards -->
