--- a/static/css/main.css
+++ b/static/css/main.css
@@ -221,9 +221,12 @@ noscript > p {
   font-weight: 300;
   letter-spacing: 1.2px;
   font-size: 2.5rem;
-  color: #fff;
   padding: 0 10px;
   text-shadow: #000 2px 3px 8px;
+}
+
+#top-bar-brand > a {
+  color: #fff;
 }
 
 #top-bar-divider {
