--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -14,20 +14,28 @@
     <!-- Selection cards -->
     <div class="row mt-5">
         <div class="col-12 col-md-5 card selection-card p-4 mb-3 mb-md-5 text-center">
-            <p class="mb-4 mb-lg-5"><i class="fas fa-file-alt"></i></p>
-            <p>Document Lookup</p>
+            <a href="#">
+                <p class="mb-4 mb-lg-5"><i class="fas fa-file-alt"></i></p>
+                <p>Document Lookup</p>
+            </a>
         </div>
         <div class="col-12 offset-md-2 col-md-5 card selection-card p-4 mb-3 mb-md-5 text-center">
-            <p class="mb-4 mb-lg-5"><i class="fas fa-file-word"></i></p>
-            <p>Document Creation</p>
+            <a href="#">
+                <p class="mb-4 mb-lg-5"><i class="fas fa-file-word"></i></p>
+                <p>Document Creation</p>
+            </a>
         </div>
         <div class="col-12 col-md-5 card selection-card p-4 mb-3 mb-md-5 text-center">
-            <p class="mb-4 mb-lg-5"><i class="fas fa-user-alt"></i></p>
-            <p>Personal Area</p>
+            <a href="#">
+                <p class="mb-4 mb-lg-5"><i class="fas fa-user-alt"></i></p>
+                <p>Personal Area</p>
+            </a>
         </div>
         <div class="col-12 offset-md-2 col-md-5 card selection-card p-4 mb-3 mb-md-5 text-center">
-            <p class="mb-4 mb-lg-5"><i class="fas fa-calendar-alt"></i></p>
-            <p>Scheduling</p>
+            <a href="#">
+                <p class="mb-4 mb-lg-5"><i class="fas fa-calendar-alt"></i></p>
+                <p>Scheduling</p>
+            </a>
         </div>
     </div>
 </section>
