--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -26,7 +26,7 @@
             </a>
         </div>
         <div class="col-12 col-md-5 card selection-card p-4 mb-3 mb-md-5 text-center">
-            <a href="#">
+            <a href="{% url 'profile' %}">
                 <p class="mb-4 mb-lg-5"><i class="fas fa-user-alt"></i></p>
                 <p>Personal Area</p>
             </a>
