Completed AJAX request and built API to retrieve user data for Edit User page

--- a/templates/administration/create_user.html
+++ b/templates/administration/create_user.html
@@ -48,7 +48,7 @@
             <legend class="fieldset-label text-black mb-3 w-auto">Permissions</legend>
             <p>Admin User <small>(Team Leads and Managers)</small></p>
             <label class="switch">
-                <input type="checkbox" name="is_superuser" id="is-superuser" />
+                <input type="checkbox" name="is_superuser" id="is-superuser" class="slider-input" />
                 <span class="slider round"></span>
             </label>
         </fieldset>
