--- a/templates/administration/admin_area.html
+++ b/templates/administration/admin_area.html
@@ -23,7 +23,7 @@
             </a>
         </div>
         <div class="col-12 offset-md-2 col-md-5 card selection-card p-4 mb-3 mb-md-5 text-center">
-            <a href="#">
+            <a href="{% url 'edit_user' %}">
                 <p class="mb-4 mb-lg-5"><i class="fas fa-user-edit"></i></p>
                 <p>Edit User</p>
             </a>
