--- a/templates/administration/admin_area.html
+++ b/templates/administration/admin_area.html
@@ -28,8 +28,8 @@
                 <p>Edit User</p>
             </a>
         </div>
-        <div class="col-12 col-md-5 card selection-card p-4 mb-3 mb-md-5 text-center">
-            <a href="#">
+        <div class="col-12 col-md-5 card selection-card p-4 mb-3 mb-md-5 mx-auto text-center">
+            <a href="{% url 'delete_user' %}">
                 <p class="mb-4 mb-lg-5"><i class="fas fa-user-times"></i></p>
                 <p>Remove User</p>
             </a>
