Altered some comments in the Accounts and Admin CSS files

--- a/static/css/accounts.css
+++ b/static/css/accounts.css
@@ -1,7 +1,7 @@
 /*
-* ----------------------------------------------------------------------------
-* Custom stylesheet and alterations for the Accounts pages provided by AllAuth
-* ----------------------------------------------------------------------------
+* -------------------------------------
+* Stylesheet for the Accounts app pages
+* -------------------------------------
 */
 
 /*** All Pages ***/
