--- a/static/css/administration.css
+++ b/static/css/administration.css
@@ -1,5 +1,7 @@
  /*
  ---------------------------------------------------------------
+       Stylesheet for the Adminstration app pages
+
        ROUND TOGGLE SWITCH
        Courtesy of W3Schools:
        https://www.w3schools.com/howto/howto_css_switch.asp
