Adjusted margin on base template search bar button

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
             </div>
              <form id="top-bar-search" class="form-inline">
                 <input type="text" name="q" placeholder="Search" class="form-control" required />
-                <button type="submit" class="btn branded-btn"><i class="fas fa-search"></i></button>
+                <button type="submit" class="btn branded-btn ml-1 ml-md-2"><i class="fas fa-search"></i></button>
             </form>
         </div>
         {% if messages %}
