Started work on the document list portion of the document_list template (not complete)

--- a/templates/documents/document_list.html
+++ b/templates/documents/document_list.html
@@ -9,8 +9,56 @@
 {% block main_content %}
 <section class="container">
     <div class="row">
-        <div class="col-12 col-lg-3 order-lg-last">
-            <article class="row card docs-sidebar-card mt-4">
+        <!-- Document List Area -->
+        <div class="col-12 col-lg-9">
+            <!-- Document Search Bar -->
+            <div class="row">
+                <form class="col-12 form-inline mt-4">
+                    <input class="form-control w-75" name="q" type="text" placeholder="Document Search" required>
+                    <button class="btn branded-btn ml-2" type="submit"><i class="fas fa-search"></i></button>
+                </form>
+            </div>
+            <!-- Recent Docs header -->
+            <div class="row">
+                <div class="col-12 mt-4 doc-list-header">
+                    <h3 class="white-text d-inline-block mb-0">Recent Docs</h3>
+                    <a href="#" class="btn btn-sm branded-btn d-inline-block ml-4">See All</a>
+                </div>
+            </div>
+            <!-- Recent Docs cards -->
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4 mt-5">
+                    <div class="card docs-list-card text-center">
+                        <div class="ribbon"><span>Category</span></div>
+                        <img src="https://dummyimage.com/60x60/000/fff" class="doc-list-card-img" alt="Author Display Picture">
+                        <p class="mt-2">Author</p>
+                        <p><strong>Document Title</strong></p>
+                        <p><span>Tag</span> <span>Tag</span> <span>Tag</span></p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mt-5">
+                    <div class="card docs-list-card text-center">
+                        <div class="ribbon"><span>Category</span></div>
+                        <img src="https://dummyimage.com/60x60/000/fff" class="doc-list-card-img" alt="Author Display Picture">
+                        <p class="mt-2">Author</p>
+                        <p><strong>Document Title</strong></p>
+                        <p><span>Tag</span> <span>Tag</span> <span>Tag</span></p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mt-5">
+                    <div class="card docs-list-card text-center">
+                        <div class="ribbon"><span>Category</span></div>
+                        <img src="https://dummyimage.com/60x60/000/fff" class="doc-list-card-img" alt="Author Display Picture">
+                        <p class="mt-2">Author</p>
+                        <p><strong>Document Title</strong></p>
+                        <p><span>Tag</span> <span>Tag</span> <span>Tag</span></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Sidebar area for searching categories and tags -->
+        <div class="col-12 col-lg-3">
+            <article class="row card docs-list-card mt-4">
                 <div class="col-12 p-3">
                     <h5>Search by Category</h5>
                 </div>
@@ -23,7 +71,7 @@
                     <button class="btn branded-btn mt-2 mx-auto">Text</button>
                 </div>
             </article>
-            <article class="row card docs-sidebar-card mt-4">
+            <article class="row card docs-list-card mt-4">
                 <div class="col-12 p-3">
                     <h5>Search by Tag</h5>
                 </div>
@@ -36,7 +84,7 @@
                     <button class="btn branded-btn mt-2 mx-auto">Text</button>
                 </div>
             </article>
-            <article class="row card docs-sidebar-card mt-4">
+            <article class="row card docs-list-card mt-4">
                 <div class="col-12 p-3">
                     Search terms shown here
                 </div>
