--- a/static/css/documents.css
+++ b/static/css/documents.css
@@ -5,6 +5,71 @@
 */
 
 /*** Document List page ***/
-.docs-sidebar-card {
+.white-text {
+    color: #fff;
+    text-shadow: rgb(20,20,20) 2px 2px 4px;
+}
+
+.doc-list-header > a {
+    vertical-align: bottom;
+}
+
+.docs-list-card {
     box-shadow: 5px 5px 2px #000;
 }
+
+.doc-list-card-img {
+    height: 60px;
+    width: 60px;
+    position: absolute;
+    left: calc(100% - 45px);
+    bottom: calc(100% - 45px);
+}
+
+/* Card corner ribbon - code from the CSS Ribbon Generator: https://www.cssportal.com/css-ribbon-generator/ */
+.ribbon {
+    position: absolute;
+    left: -5px; top: -5px;
+    z-index: 1;
+    overflow: hidden;
+    width: 75px; height: 75px;
+    text-align: right;
+  }
+
+  .ribbon span {
+    font-size: 10px;
+    font-weight: bold;
+    color: #FFF;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 20px;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    width: 100px;
+    display: block;
+    background: var(--p-orange);
+    /* background: linear-gradient(#E84610 0%, #e84610 100%); */
+    box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 1);
+    position: absolute;
+    top: 19px; left: -21px;
+  }
+
+  .ribbon span::before {
+    content: "";
+    position: absolute; left: 0px; top: 100%;
+    z-index: -1;
+    border-left: 3px solid var(--p-orange);
+    border-right: 3px solid transparent;
+    border-bottom: 3px solid transparent;
+    border-top: 3px solid var(--p-orange);
+  }
+
+  .ribbon span::after {
+    content: "";
+    position: absolute; right: 0px; top: 100%;
+    z-index: -1;
+    border-left: 3px solid transparent;
+    border-right: 3px solid var(--p-orange);
+    border-bottom: 3px solid transparent;
+    border-top: 3px solid var(--p-orange);
+  }
