--- a/templates/documents/document_list.html
+++ b/templates/documents/document_list.html
@@ -26,7 +26,44 @@
                 </div>
             </div>
             <!-- Recent Docs cards -->
-            <div class="row">
+            <div class="row recent-docs-row">
+                <div class="col-12 col-md-6 col-lg-4 mt-5">
+                    <div class="card docs-list-card text-center">
+                        <div class="ribbon"><span>Category</span></div>
+                        <img src="https://dummyimage.com/60x60/000/fff" class="doc-list-card-img" alt="Author Display Picture">
+                        <p class="mt-2">Author</p>
+                        <p><strong>Document Title</strong></p>
+                        <p><span>Tag</span> <span>Tag</span> <span>Tag</span></p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mt-5">
+                    <div class="card docs-list-card text-center">
+                        <div class="ribbon"><span>Category</span></div>
+                        <img src="https://dummyimage.com/60x60/000/fff" class="doc-list-card-img" alt="Author Display Picture">
+                        <p class="mt-2">Author</p>
+                        <p><strong>Document Title</strong></p>
+                        <p><span>Tag</span> <span>Tag</span> <span>Tag</span></p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mt-5">
+                    <div class="card docs-list-card text-center">
+                        <div class="ribbon"><span>Category</span></div>
+                        <img src="https://dummyimage.com/60x60/000/fff" class="doc-list-card-img" alt="Author Display Picture">
+                        <p class="mt-2">Author</p>
+                        <p><strong>Document Title</strong></p>
+                        <p><span>Tag</span> <span>Tag</span> <span>Tag</span></p>
+                    </div>
+                </div>
+            </div>
+            <!-- Relevant For You section -->
+            <div class="row mt-4">
+                <div class="col-12 mt-4 doc-list-header">
+                    <h3 class="white-text d-inline-block mb-0">Relevant for You</h3>
+                    <a href="#" class="btn btn-sm branded-btn d-inline-block ml-4">See All</a>
+                </div>
+            </div>
+            <!-- Relevant For You cards -->
+            <div class="row recent-docs-row">
                 <div class="col-12 col-md-6 col-lg-4 mt-5">
                     <div class="card docs-list-card text-center">
                         <div class="ribbon"><span>Category</span></div>
@@ -58,7 +95,7 @@
         </div>
         <!-- Sidebar area for searching categories and tags -->
         <div class="col-12 col-lg-3">
-            <article class="row card docs-list-card mt-4">
+            <article class="row card docs-list-sidecard mt-4">
                 <div class="col-12 p-3">
                     <h5>Search by Category</h5>
                 </div>
@@ -71,7 +108,7 @@
                     <button class="btn branded-btn mt-2 mx-auto">Text</button>
                 </div>
             </article>
-            <article class="row card docs-list-card mt-4">
+            <article class="row card docs-list-sidecard mt-4">
                 <div class="col-12 p-3">
                     <h5>Search by Tag</h5>
                 </div>
@@ -84,7 +121,7 @@
                     <button class="btn branded-btn mt-2 mx-auto">Text</button>
                 </div>
             </article>
-            <article class="row card docs-list-card mt-4">
+            <article class="row card docs-list-sidecard mt-4">
                 <div class="col-12 p-3">
                     Search terms shown here
                 </div>
