--- a/templates/documents/document_list.html
+++ b/templates/documents/document_list.html
@@ -32,9 +32,9 @@
                     <div class="card docs-list-card text-center">
                         <div class="ribbon"><span>Category</span></div>
                         <img src="{{ file.owners.0.photoLink }}" class="doc-list-card-img rounded-circle" alt="Author Display Picture">
-                        <p class="mt-2">{{ file.owners.0.displayName }}</p>
-                        <p><strong>{{ file.name }}</strong></p>
-                        <p><span>Tag</span> <span>Tag</span> <span>Tag</span></p>
+                        <p class="mt-3">{{ file.owners.0.displayName }}</p>
+                        <a href="{{ file.webViewLink }}" class="mt-3" target="_blank"><strong>{{ file.name }}</strong></a>
+                        <p class="mt-3"><span>Tag</span> <span>Tag</span> <span>Tag</span></p>
                     </div>
                 </div>
                 {% endfor %}
@@ -49,13 +49,13 @@
             <!-- Relevant For You cards -->
             <div class="row recent-docs-row">
                 {% for file in relevant_files.files %}
-                <div class="col-12 col-md-6 col-lg-4 mt-5">
+                <div class="col-12 col-md-6 col-lg-4 mt-5 align-items-stretch">
                     <div class="card docs-list-card text-center">
                         <div class="ribbon"><span>Category</span></div>
                         <img src="{{ file.owners.0.photoLink }}" class="doc-list-card-img rounded-circle" alt="Author Display Picture">
-                        <p class="mt-2">{{ file.owners.0.displayName }}</p>
-                        <p><strong>{{ file.name }}</strong></p>
-                        <p><span>Tag</span> <span>Tag</span> <span>Tag</span></p>
+                        <p class="mt-3">{{ file.owners.0.displayName }}</p>
+                        <a href="{{ file.webViewLink }}" class="mt-3" target="_blank"><strong>{{ file.name }}</strong></a>
+                        <p class="mt-3"><span>Tag</span> <span>Tag</span> <span>Tag</span></p>
                     </div>
                 </div>
                 {% endfor %}
