--- a/templates/documents/document_list.html
+++ b/templates/documents/document_list.html
@@ -1,100 +1,55 @@
-{% extends "base.html" %}
+{% extends "documents/document_base.html" %}
 {% load static %}
 {% block title %}Documents{% endblock %}
 
-{% block injected_css %}
-<link rel="stylesheet" href="{% static 'css/documents.css' %}">
-{% endblock %}
-
-{% block main_content %}
-<section class="container">
-    <div class="row">
-        <!-- Document List Area -->
-        <div class="col-12 col-lg-9">
-            <!-- Document Search Bar -->
-            <div class="row">
-                <form class="col-12 form-inline mt-4">
-                    <input class="form-control w-75" name="q" type="text" placeholder="Document Search" required>
-                    <button class="btn branded-btn ml-2" type="submit"><i class="fas fa-search"></i></button>
-                </form>
-            </div>
-            <!-- Recent Docs header -->
-            <div class="row">
-                <div class="col-12 mt-4 doc-list-header">
-                    <h3 class="white-text d-inline-block mb-0">Recent Docs</h3>
-                    <a href="#" class="btn btn-sm branded-btn d-inline-block ml-4">See All</a>
-                </div>
-            </div>
-            <!-- Recent Docs cards -->
-            <div class="row recent-docs-row">
-                {% for file in recent_files.files %}
-                <div class="col-12 col-md-6 col-lg-4 mt-5">
-                    <div class="card docs-list-card text-center">
-                        <div class="ribbon"><span>Category</span></div>
-                        <img src="{{ file.owners.0.photoLink }}" class="doc-list-card-img rounded-circle" alt="Author Display Picture">
-                        <p class="mt-3">{{ file.owners.0.displayName }}</p>
-                        <a href="{{ file.webViewLink }}" class="mt-3" target="_blank"><strong>{{ file.name }}</strong></a>
-                        <p class="mt-3"><span>Tag</span> <span>Tag</span> <span>Tag</span></p>
-                    </div>
-                </div>
-                {% endfor %}
-            </div>
-            <!-- Relevant For You section -->
-            <div class="row mt-4">
-                <div class="col-12 mt-4 doc-list-header">
-                    <h3 class="white-text d-inline-block mb-0">Relevant for You</h3>
-                    <a href="#" class="btn btn-sm branded-btn d-inline-block ml-4">See All</a>
-                </div>
-            </div>
-            <!-- Relevant For You cards -->
-            <div class="row recent-docs-row">
-                {% for file in relevant_files.files %}
-                <div class="col-12 col-md-6 col-lg-4 mt-5 align-items-stretch">
-                    <div class="card docs-list-card text-center">
-                        <div class="ribbon"><span>Category</span></div>
-                        <img src="{{ file.owners.0.photoLink }}" class="doc-list-card-img rounded-circle" alt="Author Display Picture">
-                        <p class="mt-3">{{ file.owners.0.displayName }}</p>
-                        <a href="{{ file.webViewLink }}" class="mt-3" target="_blank"><strong>{{ file.name }}</strong></a>
-                        <p class="mt-3"><span>Tag</span> <span>Tag</span> <span>Tag</span></p>
-                    </div>
-                </div>
-                {% endfor %}
-            </div>
-        </div>
-        <!-- Sidebar area for searching categories and tags -->
-        <div class="col-12 col-lg-3">
-            <article class="row card docs-list-sidecard mt-4">
-                <div class="col-12 p-3">
-                    <h5>Search by Category</h5>
-                </div>
-                <div class="col-12 p-3">
-                    <button class="btn branded-btn mt-2 mx-auto">Text</button>
-                    <button class="btn branded-btn mt-2 mx-auto">Text Longer</button>
-                    <button class="btn branded-btn mt-2 mx-auto">Text</button>
-                    <button class="btn branded-btn mt-2 mx-auto">Textsfdsf</button>
-                    <button class="btn branded-btn mt-2 mx-auto">Text Long</button>
-                    <button class="btn branded-btn mt-2 mx-auto">Text</button>
-                </div>
-            </article>
-            <article class="row card docs-list-sidecard mt-4">
-                <div class="col-12 p-3">
-                    <h5>Search by Tag</h5>
-                </div>
-                <div class="col-12 p-3">
-                    <button class="btn branded-btn mt-2 mx-auto">Text</button>
-                    <button class="btn branded-btn mt-2 mx-auto">Text Longer</button>
-                    <button class="btn branded-btn mt-2 mx-auto">Text</button>
-                    <button class="btn branded-btn mt-2 mx-auto">Textsfdsf</button>
-                    <button class="btn branded-btn mt-2 mx-auto">Text Long</button>
-                    <button class="btn branded-btn mt-2 mx-auto">Text</button>
-                </div>
-            </article>
-            <article class="row card docs-list-sidecard mt-4">
-                <div class="col-12 p-3">
-                    Search terms shown here
-                </div>
-            </article>
+{% block doc_content %}
+<!-- Document Search Bar -->
+<div class="row">
+    <form class="col-12 form-inline mt-4">
+        <input class="form-control w-75" name="q" type="text" placeholder="Document Search" required>
+        <button class="btn branded-btn ml-2" type="submit"><i class="fas fa-search"></i></button>
+    </form>
+</div>
+<!-- Recent Docs header -->
+<div class="row">
+    <div class="col-12 mt-4 doc-list-header">
+        <h3 class="white-text d-inline-block mb-0">Recent Docs</h3>
+        <a href="#" class="btn btn-sm branded-btn d-inline-block ml-4">See All</a>
+    </div>
+</div>
+<!-- Recent Docs cards -->
+<div class="row recent-docs-row">
+    {% for file in recent_files.files %}
+    <div class="col-12 col-md-6 col-lg-4 mt-5">
+        <div class="card docs-list-card text-center">
+            <div class="ribbon"><span>Category</span></div>
+            <img src="{{ file.owners.0.photoLink }}" class="doc-list-card-img rounded-circle" alt="Author Display Picture">
+            <p class="mt-3">{{ file.owners.0.displayName }}</p>
+            <a href="{{ file.webViewLink }}" class="mt-3" target="_blank"><strong>{{ file.name }}</strong></a>
+            <p class="mt-3"><span>Tag</span> <span>Tag</span> <span>Tag</span></p>
         </div>
     </div>
-</section>
+    {% endfor %}
+</div>
+<!-- Relevant For You header -->
+<div class="row mt-4">
+    <div class="col-12 mt-4 doc-list-header">
+        <h3 class="white-text d-inline-block mb-0">Relevant for You</h3>
+        <a href="#" class="btn btn-sm branded-btn d-inline-block ml-4">See All</a>
+    </div>
+</div>
+<!-- Relevant For You cards -->
+<div class="row recent-docs-row">
+    {% for file in relevant_files.files %}
+    <div class="col-12 col-md-6 col-lg-4 mt-5 align-items-stretch">
+        <div class="card docs-list-card text-center">
+            <div class="ribbon"><span>Category</span></div>
+            <img src="{{ file.owners.0.photoLink }}" class="doc-list-card-img rounded-circle" alt="Author Display Picture">
+            <p class="mt-3">{{ file.owners.0.displayName }}</p>
+            <a href="{{ file.webViewLink }}" class="mt-3" target="_blank"><strong>{{ file.name }}</strong></a>
+            <p class="mt-3"><span>Tag</span> <span>Tag</span> <span>Tag</span></p>
+        </div>
+    </div>
+    {% endfor %}
+</div>
 {% endblock %}
