Altered document_list view to be document_overview. Updated URLs

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
                 <!-- data-toggle for dropdown is added via JS -->
                 <li><a href="#document-menu" class="document-dropdown"><i class="fas fa-file-alt"></i><p class="d-none">Documents Menu</p></a></li>
                 <ul class="collapse" id="document-menu">
-                    <li><a href="{% url 'document_list' %}">Document Lookup</a></li>
+                    <li><a href="{% url 'document_overview' %}">Document Lookup</a></li>
                     <li><a href="#">Document Creation</a></li>
                 </ul>
                 <li><a href="{% url 'profile' %}"><i class="fas fa-user"></i><p class="d-none">Personal Area</p></a></li>
