--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -14,7 +14,7 @@
     <!-- Selection cards -->
     <div class="row mt-5">
         <div class="col-12 col-md-5 card selection-card p-4 mb-3 mb-md-5 text-center">
-            <a href="{% url 'document_list' %}">
+            <a href="{% url 'document_overview' %}">
                 <p class="mb-4 mb-lg-5"><i class="fas fa-file-alt"></i></p>
                 <p>Document Lookup</p>
             </a>
