--- a/templates/documents/document_list.html
+++ b/templates/documents/document_list.html
@@ -4,7 +4,9 @@
 
 {% block doc_content %}
 <div class="row">
-    <a href="{% url 'document_overview' %}" class="btn branded-btn"><i class="fas fa-angle-left"></i> Go Back</a>
+    <div class="col-12 mt-4">
+        <a href="{% url 'document_overview' %}" class="btn branded-btn"><i class="fas fa-angle-left"></i> Go Back</a>
+    </div>
 </div>
 <!-- Recent Docs header -->
 <div class="row">
@@ -14,7 +16,7 @@
 </div>
 <!-- Recent Docs cards -->
 <div class="row recent-docs-row">
-    {% for file in recent_files.files %}
+    {% for file in all_files.files %}
     <div class="col-12 col-md-6 col-lg-4 mt-5">
         <div class="card docs-list-card text-center">
             <div class="ribbon"><span>Category</span></div>
