--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -20,7 +20,7 @@
             </a>
         </div>
         <div class="col-12 offset-md-2 col-md-5 card selection-card p-4 mb-3 mb-md-5 text-center">
-            <a href="#">
+            <a href="{% url 'doc_creation_area' %}">
                 <p class="mb-4 mb-lg-5"><i class="fas fa-file-word"></i></p>
                 <p>Document Creation</p>
             </a>
