--- a/templates/documents/document_creation_selection.html
+++ b/templates/documents/document_creation_selection.html
@@ -18,13 +18,13 @@
     <!-- Selection cards -->
     <div class="row mt-5">
         <div class="col-12 col-md-5 card selection-card p-4 my-3 mb-md-5 text-center">
-            <a href="#">
+            <a href="{% url 'create_document' %}?doctype=Doc">
                 <p class="mb-4 mb-lg-5"><i class="fas fa-file-alt"></i></p>
                 <p>Google Doc</p>
             </a>
         </div>
         <div class="col-12 offset-md-2 col-md-5 card selection-card p-4 my-3 mb-md-5 text-center">
-            <a href="#">
+            <a href="{% url 'create_document' %}?doctype=Sheet">
                 <p class="mb-4 mb-lg-5"><i class="fas fa-file-excel"></i></p>
                 <p>Google Sheet</p>
             </a>
