Added media query for headers to Documents CSS file

--- a/static/css/documents.css
+++ b/static/css/documents.css
@@ -99,3 +99,13 @@
         margin-right: 0;
     }
 }
+
+@media screen and (max-width: 576px){
+    .page-header {
+        font-size: 1.6rem;
+    }
+
+    .page-subheader {
+        font-size: 1.1rem;
+    }
+}
