Altered the tags name field on the create_document template

--- a/templates/documents/create_document.html
+++ b/templates/documents/create_document.html
@@ -71,8 +71,8 @@
                     {% endfor %}
                 </div>
                 <div class="mt-2">
-                    <label for="tags">Extra tags</label>
-                    <input name="tags" id="tags" type="text" class="form-control" aria-describedby="tagsHelpBlock">
+                    <label for="extra-tags">Extra tags</label>
+                    <input name="extra_tags" id="extra-tags" type="text" class="form-control" aria-describedby="tagsHelpBlock">
                     <small id="tagsHelpBlock" class="form-text text-muted">
                         Enter as many tags as you like, separated by a comma. 
                         For tags that are multi-word, use camelCase. Eg: tutoring, learningSuccess, sales
